@@ -14,7 +14,8 @@ UnitTest.asynctest('Checkbox component Test', (success, failure) => {
     },
     menuItems: () => <Record<string, any>> {},
     translate: I18n.translate,
-    isReadOnly: () => false
+    isReadOnly: () => false,
+    getSetting: (_settingName: string, defaultVal: any) => defaultVal
   };
 
   TestHelpers.GuiSetup.setup(
